# tdb-fork

./: .gitignore  CONTRIBUTING.md  README.md  build_log.txt  build_log_2.txt  docker-compose.yml  mkdocs.yml  package.json
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/lumadb/: Cargo.toml
crates/lumadb-admin/: Cargo.toml
crates/lumadb-admin/src/: lib.rs
crates/lumadb-api/: Cargo.toml
crates/lumadb-api/src/: lib.rs
crates/lumadb-api/src/graphql/: mod.rs
crates/lumadb-api/src/grpc/: mod.rs
crates/lumadb-api/src/rest/: mod.rs
crates/lumadb-api/src/websocket/: mod.rs
crates/lumadb-cluster/: Cargo.toml
crates/lumadb-cluster/src/: lib.rs  sharding.rs
crates/lumadb-common/: Cargo.toml
crates/lumadb-common/src/: config.rs  error.rs  lib.rs  metrics.rs  types.rs
crates/lumadb-compat/: Cargo.toml
crates/lumadb-compat/src/: lib.rs
crates/lumadb-compat/src/migration/: exporters.rs  mod.rs  sources.rs  tool.rs
crates/lumadb-compat/src/mongodb/: handlers.rs  mod.rs  protocol.rs  server.rs  types.rs
crates/lumadb-compat/src/pinecone/: handlers.rs  mod.rs  server.rs  types.rs
crates/lumadb-compat/src/qdrant/: handlers.rs  mod.rs  server.rs  types.rs
crates/lumadb-multicompat/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
crates/lumadb-multicompat/benches/: protocol_bench.rs
crates/lumadb-multicompat/docs/: API_REFERENCE.md  DEPLOYMENT.md  MIGRATION.md  TESTING.md
crates/lumadb-multicompat/grafana/dashboards/: lumadb.json
crates/lumadb-multicompat/kubernetes/: deployment.yaml  monitoring.yaml
crates/lumadb-multicompat/src/: core.rs  lib.rs  server.rs
crates/lumadb-multicompat/src/d1/: mod.rs
crates/lumadb-multicompat/src/dynamodb/: auth.rs  mod.rs  translator.rs
crates/lumadb-multicompat/src/storage/: cache.rs  mod.rs  optimizer.rs
crates/lumadb-multicompat/src/turso/: mod.rs
crates/lumadb-multicompat/tests/: d1_tests.rs  dynamodb_tests.rs  integration_tests.rs  mod.rs  storage_tests.rs  turso_tests.rs
crates/lumadb-multicompat/tests/benchmarks/: d1_bench.rs  dynamodb_bench.rs  turso_bench.rs
crates/lumadb-multicompat/tests/integration/: d1_client_test.rs  dynamodb_sdk_test.rs  turso_client_test.rs
crates/lumadb-multicompat/tests/unit/: d1_converter_test.rs  dynamodb_translator_test.rs  (+1 more)
crates/lumadb-protocol/: Cargo.toml
crates/lumadb-protocol/src/: lib.rs
crates/lumadb-query/: Cargo.toml
crates/lumadb-query/src/: engine.rs  lib.rs
crates/lumadb-raft/: Cargo.toml
crates/lumadb-raft/src/: lib.rs
crates/lumadb-security/: Cargo.toml
crates/lumadb-security/src/: lib.rs  manager.rs
crates/lumadb-storage/: Cargo.toml
crates/lumadb-storage/src/: engine.rs  lib.rs  wal.rs
crates/lumadb-streaming/: Cargo.toml
crates/lumadb-streaming/benches/: streaming_bench.rs
crates/lumadb-streaming/src/: engine.rs  lib.rs
crates/lumadb-txn/: Cargo.toml
crates/lumadb-txn/src/: lib.rs
crates/lumadb/src/: cli.rs  config.rs  main.rs  server.rs
crates/supabase-compat/: Cargo.toml  Dockerfile  README.md  SECURITY.md  supabase.toml
crates/supabase-compat/src/: lib.rs  main.rs
crates/supabase-compat/supabase-admin/: Cargo.toml
crates/supabase-compat/supabase-auth/: Cargo.toml
crates/supabase-compat/supabase-common/: Cargo.toml
crates/supabase-compat/supabase-functions/: Cargo.toml
crates/supabase-compat/supabase-graphql/: Cargo.toml
crates/supabase-compat/supabase-mfa/: Cargo.toml
crates/supabase-compat/supabase-migrations/: Cargo.toml
crates/supabase-compat/supabase-observability/: Cargo.toml
crates/supabase-compat/supabase-realtime/: Cargo.toml
crates/supabase-compat/supabase-rest/: Cargo.toml
crates/supabase-compat/supabase-rls/: Cargo.toml
crates/supabase-compat/supabase-storage/: Cargo.toml
crates/supabase-compat/supabase-vector/: Cargo.toml
crates/supabase-compat/supabase-webhooks/: Cargo.toml
crates/supabase-compat/tests/: integration_tests.rs
crates/tests/: Cargo.toml  integration_tests.rs
python-ai/: Dockerfile  README.md  pyproject.toml
python-ai/lumaai/: inference.py  llm.py  main.py
python-ai/lumaai/promptql/: __init__.py  context.py  engine.py  llm.py  planner.py  semantic.py
python-ai/tdbai/: __init__.py  bindings.py  inference.py  main.py  nlp.py  vector.py
python-ai/tdbai/promptql/: executor.py  optimizer.py  reasoner.py  schema.py
python-ai/tests/: test_main.py
rust-core/: Cargo.toml
rust-core/src/: config.rs  error.rs  lib.rs  node_bindings.rs  types.rs
rust-core/src/ai/: mod.rs  vector.rs
rust-core/src/cluster/: mod.rs  placement_driver.rs
rust-core/src/columnar/: compression.rs  mod.rs  simd.rs  timeseries.rs  vector.rs
rust-core/src/compaction/: mod.rs
rust-core/src/ffi/: handles.rs  mod.rs  types.rs
rust-core/src/graphql/: mod.rs  schema_generator.rs
rust-core/src/hybrid/: index.rs  migration.rs  mod.rs  prefetch.rs  tier.rs
rust-core/src/index/: mod.rs
rust-core/src/io/: mod.rs  uring.rs
rust-core/src/kafka/: engine.rs  mod.rs  perf.rs  server.rs
rust-core/src/latency/: mod.rs
rust-core/src/meilisearch/: engine.rs
rust-core/src/memory/: arena.rs  cache.rs  hot_cache.rs  memtable.rs  mod.rs
rust-core/src/net/: dpdk.rs  mod.rs  rdma.rs
rust-core/src/observability/: mod.rs  otlp.rs  query.rs  storage.rs
rust-core/src/query/: lql.pest  lql.rs  mod.rs
rust-core/src/raft/: mod.rs  multi_raft.rs
rust-core/src/scripting/: mod.rs  procedures.rs  triggers.rs
rust-core/src/shard/: mod.rs
rust-core/src/storage/: collection.rs  columnar.rs  engine.rs  manifest.rs  mod.rs  policy.rs  sstable.rs
rust-core/src/tsdb/: gorilla.rs
rust-core/src/txn/: coordinator.rs  mod.rs
rust-core/src/wal/: mod.rs  optimized_wal.rs
rust-core/tests/: indexing_test.rs  snapshot_test.rs  tsdb_compat_tests.rs
sdks/python/: Cargo.toml  pyproject.toml
sdks/python/lumadb/: __init__.py  client.py
sdks/python/src/: lib.rs
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
sdks/supabase-py/: README.md  pyproject.toml
sdks/supabase-py/supabase/: __init__.py  auth.py  client.py  postgrest.py  types.py
(+231 files in other folders)
