[package]
name = "luma-core"
version = "0.1.0"
edition = "2021"
authors = ["TDB+ Contributors"]
description = "High-performance storage engine for TDB+"
license = "MIT"

[lib]
name = "luma_core"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# Core
bytes = "1.5"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Storage
memmap2 = "0.9"
crc32fast = "1.3"
lz4_flex = "0.11"
zstd = "0.13"

# Async
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"

# Node.js Bindings
napi = { version = "2.14", features = ["async"] }
napi-derive = "2.14"

# FFI
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
uniffi = { version = "0.25", optional = true }

# Logging & metrics
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# Utils
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Scripting
rhai = { version = "1.16", features = ["sync", "serde"] }
libc = "0.2.178"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"

[features]
default = ["compression"]
compression = []
python = ["pyo3"]
uniffi-bindings = ["uniffi"]

[[bench]]
name = "storage_bench"
harness = false
path = "../benchmarks/rust_bench.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
