[package]
name = "lumadb-multicompat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-protocol compatibility layer for LumaDB - DynamoDB, D1, Turso drop-in replacement"

[dependencies]
lumadb-common = { workspace = true }
lumadb-storage = { workspace = true }
lumadb-query = { workspace = true }
lumadb-security = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "lumadb-compat-server"
path = "src/bin/lumadb-compat-server.rs"

[[bench]]
name = "protocol_bench"
harness = false
