[package]
name = "lumadb-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol implementations for LumaDB (Kafka, PostgreSQL, MongoDB, Redis)"

[dependencies]
lumadb-common = { workspace = true }
lumadb-streaming = { workspace = true }
lumadb-security = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Utils
crc32fast = { workspace = true }
