[package]
name = "lumadb-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Security layer for LumaDB (authentication, authorization, encryption)"

[dependencies]
lumadb-common = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Crypto
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
ring = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Utils
chrono = { workspace = true }
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }
