[package]
name = "supabase-compat"
version = "0.1.0"
edition = "2021"
description = "Supabase compatibility layer for LumaDB"
license = "Apache-2.0"
repository = "https://github.com/abiolaogu/LumaDB"

[workspace]
members = [
    "supabase-common",
    "supabase-rest",
    "supabase-auth",
    "supabase-rls",
    "supabase-realtime",
    "supabase-storage",
    "supabase-functions",
    "supabase-graphql",
    "supabase-vector",
    "supabase-webhooks",
    "supabase-mfa",
    "supabase-observability",
    "supabase-migrations",
    "supabase-admin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/abiolaogu/LumaDB"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web Framework
actix-web = { version = "4.5", features = ["rustls-0_23"] }
actix-rt = "2.9"
actix-cors = "0.7"
actix-ws = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.5", features = ["serde"] }

# Security
jsonwebtoken = "9.3"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# Database
sqlparser = { version = "0.43", features = ["visitor"] }

# HTTP Client (for OAuth)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenAPI
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

# Internal dependencies
supabase-common = { path = "supabase-common" }
supabase-auth = { path = "supabase-auth" }
supabase-rest = { path = "supabase-rest" }
supabase-realtime = { path = "supabase-realtime" }
supabase-storage = { path = "supabase-storage" }
supabase-functions = { path = "supabase-functions" }
supabase-rls = { path = "supabase-rls" }
supabase-graphql = { path = "supabase-graphql" }
supabase-vector = { path = "supabase-vector" }
supabase-webhooks = { path = "supabase-webhooks" }
supabase-mfa = { path = "supabase-mfa" }
supabase-observability = { path = "supabase-observability" }
supabase-migrations = { path = "supabase-migrations" }
supabase-admin = { path = "supabase-admin" }

[dependencies]
supabase-common = { workspace = true }
supabase-auth = { workspace = true }
supabase-rest = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
parking_lot = "0.12"
anyhow = { workspace = true }

[[bin]]
name = "lumadb-supabase"
path = "src/main.rs"

[lib]
name = "supabase_compat"
path = "src/lib.rs"

