[project]
name = "lumadb"
version = "0.1.0b1"
description = "LumaDB Python SDK - Ultra-fast unified database client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abiola Ogunsakin", email = "abiola@billyronks.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
]
keywords = ["database", "kafka", "streaming", "vector", "search"]

dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
numpy = ["numpy>=1.20"]
all = ["pandas>=1.3", "numpy>=1.20"]

[project.urls]
Homepage = "https://lumadb.io"
Documentation = "https://docs.lumadb.io/python"
Repository = "https://github.com/abiolaogu/LumaDB"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
