[package]
name = "lumadb-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Abiola Ogunsakin <abiola@billyronks.com>"]
license = "Apache-2.0"
description = "LumaDB Rust SDK - High-performance client for LumaDB"
repository = "https://github.com/abiolaogu/LumaDB"
documentation = "https://docs.lumadb.io/rust"

[dependencies]
# Async
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Networking
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
