[project]
name = "lumadb-supabase"
version = "0.1.0"
description = "Supabase-compatible Python SDK for LumaDB"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abiola Ogunsakin", email = "abiola@billyronks.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
keywords = ["supabase", "lumadb", "database", "client", "postgresql"]

dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "mypy>=1.0"]

[project.urls]
Homepage = "https://lumadb.io"
Documentation = "https://docs.lumadb.io/python"
Repository = "https://github.com/abiolaogu/LumaDB"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["supabase"]
