[package]
name = "supabase-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common types and utilities for Supabase compatibility layer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
