[package]
name = "supabase-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GraphQL API service for Supabase compatibility layer"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"
supabase-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
