[package]
name = "supabase-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observability stack for Supabase compatibility layer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
parking_lot = "0.12"
supabase-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
