[package]
name = "supabase-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time subscriptions for Supabase compatibility layer"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12"
supabase-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

